--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         }
 
         .sidebar {
-            width: 240px;
+            width: 66px;
             background: linear-gradient(180deg, var(--primary) 0%, var(--primary-dark) 100%);
             color: white;
             position: fixed;
@@ -335,9 +335,12 @@
         .sidebar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.08); border-radius: 4px; }
 
         .sidebar-header {
-            padding: 1.4rem 1.1rem 1.2rem;
+            padding: 1rem 0.5rem 0.8rem;
             border-bottom: 1px solid rgba(255,255,255,0.07);
             flex-shrink: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .close-sidebar {
@@ -359,15 +362,17 @@
 
         .logo-container {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 0.9rem;
+            gap: 0.4rem;
+            width: 100%;
         }
 
         /* ── Sidebar: logo circular ── */
         .logo-wrapper {
-            width: 40px;
-            height: 40px;
-            border-radius: 10px;
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
             overflow: hidden;
             cursor: pointer;
             transition: transform 0.2s, box-shadow 0.2s;
@@ -382,13 +387,14 @@
         .logo-wrapper:hover { transform: scale(1.05); box-shadow: 0 4px 18px rgba(0,0,0,0.4); }
         .logo-img { display: none !important; }
         .logo-placeholder {
-            width: 40px;
-            height: 40px;
-            border-radius: 10px;
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
             cursor: pointer;
             transition: transform 0.2s;
             flex-shrink: 0;
-            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            background: linear-gradient(135deg, rgba(255,255,255,0.3), rgba(255,255,255,0.1));
+            border: 2px solid rgba(255,255,255,0.4);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -399,26 +405,26 @@
         .logo-placeholder:hover { transform: scale(1.05); }
 
         .company-name {
-            font-size: 0.93rem;
+            font-size: 0.6rem;
             font-weight: 700;
             color: white;
             word-break: break-word;
             letter-spacing: 0.1px;
             line-height: 1.2;
+            text-align: center;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 60px;
         }
 
         .company-subtitle {
-            font-size: 0.62rem;
-            color: rgba(255,255,255,0.4);
-            font-weight: 500;
-            letter-spacing: 1.5px;
-            text-transform: uppercase;
-            margin-top: 2px;
+            display: none;
         }
 
         .sidebar-menu {
             flex: 1;
-            padding: 0.5rem 0.75rem;
+            padding: 0.5rem 0.4rem;
             overflow-y: auto;
         }
 
@@ -429,12 +435,14 @@
             color: rgba(255,255,255,0.25);
             letter-spacing: 2.5px;
             text-transform: uppercase;
+            display: none;
         }
 
         .menu-item {
-            padding: 0.65rem 0.85rem;
+            padding: 0.7rem 0.5rem;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 10px;
             cursor: pointer;
             transition: all 0.18s;
@@ -446,10 +454,14 @@
             position: relative;
         }
 
+        .menu-item span {
+            display: none;
+        }
+
         .menu-item i {
             width: 18px;
             text-align: center;
-            font-size: 0.9rem;
+            font-size: 1rem;
             flex-shrink: 0;
         }
 
@@ -459,7 +471,7 @@
         }
 
         .menu-item.active {
-            background: rgba(255,255,255,0.1);
+            background: rgba(255,255,255,0.15);
             color: white;
             font-weight: 600;
         }
@@ -467,22 +479,22 @@
             content: '';
             position: absolute;
             left: 0;
-            top: 20%;
-            height: 60%;
+            top: 15%;
+            height: 70%;
             width: 3px;
             border-radius: 0 3px 3px 0;
-            background: var(--primary);
+            background: white;
         }
 
         .sidebar-footer {
-            padding: 0.85rem 0.75rem;
+            padding: 0.6rem 0.4rem;
             border-top: 1px solid rgba(255,255,255,0.07);
             flex-shrink: 0;
         }
 
         .theme-toggle {
             width: 100%;
-            padding: 0.6rem 0.85rem;
+            padding: 0.6rem 0.5rem;
             background: rgba(255,255,255,0.06);
             border: 1px solid rgba(255,255,255,0.08);
             color: rgba(255,255,255,0.55);
@@ -490,20 +502,18 @@
             cursor: pointer;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 10px;
             transition: all 0.18s;
             font-size: 0.83rem;
             font-weight: 500;
         }
+        .theme-toggle span { display: none; }
         .theme-toggle:hover { background: rgba(255,255,255,0.1); color: white; }
-
-        .theme-toggle:hover {
-            background: rgba(255,255,255,0.2);
-        }
 
         .main-content {
             flex: 1;
-            margin-left: 240px;
+            margin-left: 66px;
             padding: 1.5rem;
             transition: margin-left 0.3s cubic-bezier(.4,0,.2,1);
             min-width: 0;
